--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Seamus Allen Portfolio Site | PROG109 | Bellevue College</title>
+		<title>Seamus Allen's Portfolio Site | PROG109 | Bellevue College</title>
   </head>
   <body>
     Hello, World!
