--- a/artifact01.html
+++ b/artifact01.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
@@ -8,7 +8,7 @@
   <hr>
 
     <img src="https://images.unsplash.com/photo-1609440082513-44939695dcc7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx" alt="Portrait of Claudia Martinez" width="200">
-    <figcaption>Photo courtesy Unsplash</figcaption>
+    Photo courtesy Unsplash
   
   <h2>PERSONAL DETAILS</h2>
        Residential Address: 	123 Dreamland Street, 45987 Moema BRAZIL<br> 
