--- a/artifact01.html
+++ b/artifact01.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>JS Bin</title>
+  <title>Artifact01</title>
+</head>
+<body>
   <h1>CURRICULUM VITAE CLAUDIA MARTINEZ</h1>
   <hr>
 
@@ -130,4 +132,5 @@ Email: izabelam@artofmarketing.com<br>
 </address>
 
 <p><a href="http://validator.w3.org/check?uri=referer" target="_blank"><img src="https://www.w3.org/html/logo/badge/html5-badge-h-css3-semantics.png" width="165" height="64" alt="HTML5" title="HTML5"></a></p>
+  </body>
 </html>
