--- a/module01.html
+++ b/module01.html
@@ -9,15 +9,13 @@
         <h2>Created by: Seamus Allen</h2>
         <hr>
 		<h3>Asian BBQ Salmon</h3>
-		<figure width="400">
+		<figure>
             <a href="https://www.delish.com/cooking/recipe-ideas/recipes/a53482/best-bbq-salmon-recipe/">
 			<img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/190510-barbecue-salmon-horizontal-1-1558117451.png?crop=0.6668421052631579xw:1xh;center,top&resize=768:*" alt="Image of Asian BBQ Salmon topped with green onions and sesame seeds" title="Image of Asian BBQ Salmon topped with green onions and sesame seeds" width="400"/>
             </a>
-            <p>
 				<figcaption>
 				    You may think Salmon, Barbeque, and Asian cuisine are a <br> wierd  mix, and they are, but the result is delicious. <br> Image credit  Parker  Feirbach.
 				</figcaption>
-			</p>
 		</figure>
 		<h4>More Recipes:</h4>
 		<p>
