--- a/module02.html
+++ b/module02.html
@@ -12,7 +12,7 @@
                 <td colspan="3"><h1>HTML Table Example</h1> </td>
             </tr>
             <tr>
-                <td>1</td>
+                <td><img src="/images/KitchenClipArt.jpg"></td>
                 <td><h2>Meal Planner</h2></td>
                 <td><h2>Recipie Index #:</h2></td>
             </tr>
