--- a/module02.html
+++ b/module02.html
@@ -4,55 +4,55 @@
 	<head>
         <meta charset="utf-8" />
 		<title>Module 02</title>
-        <link rel="stylesheet" type="text/css" media="screen" href="css/module02.css" />
+        <!-- <link rel="stylesheet" type="text/css" media="screen" href="css/module02.css" /> -->
 	</head>
 	<body>
-        <table>
+        <table style="border:1px solid black;border-collapse:collapse;">
             <tr>
-                <td colspan="3"><h1>HTML Table Example</h1> </td>
+                <td style="text-align:center" style="border:1px solid black;" colspan="3"><h1>HTML Table Example</h1> </td>
             </tr>
             <tr>
-                <td><img alt="kitchen clipart" src="images/KitchenClipArt.JPG"></td>
-                <td><h2>Meal Planner</h2></td>
-                <td><h2>Recipie Index #:</h2></td>
+                <td style="border:1px solid black;"><img alt="kitchen clipart" src="images/KitchenClipArt.JPG"></td>
+                <td style="border:1px solid black;"><h2>Meal Planner</h2></td>
+                <td style="border:1px solid black;"><h2>Recipie Index #:</h2></td>
             </tr>
             <tr>
-                <th>Week Starting</th>
-                <th>2/15/2018</th>
-                <th>Instructions</th>
+                <th style="border:1px solid black;">Week Starting</th>
+                <th style="border:1px solid black;">2/15/2018</th>
+                <th style="border:1px solid black;">Instructions</th>
             </tr>
             <tr>
-                <td><b>Day of the Week</b></td>
-                <td><b>Recipe Name</b></td>
-                <td rowspan="8">Add the name of the recipie under the column Recipie Name</td>
+                <td style="border:1px solid black;"><b>Day of the Week</b></td>
+                <td style="border:1px solid black;"><b>Recipe Name</b></td>
+                <td style="border:1px solid black;" rowspan="8">Add the name of the recipie under the column Recipie Name</td>
             </tr>
             <tr>
-                <td>Monday</td>
-                <td></td>
+                <td style="border:1px solid black;">Monday</td>
+                <td style="border:1px solid black;"></td>
             </tr>
             <tr>
-                <td>Tuesday</td>
-                <td></td>
+                <td style="border:1px solid black;">Tuesday</td>
+                <td style="border:1px solid black;"></td>
             </tr>
             <tr>
-                <td>Wednesday</td>
-                <td></td>
+                <td style="border:1px solid black;">Wednesday</td>
+                <td style="border:1px solid black;"></td>
             </tr>
             <tr>
-                <td>Thursday</td>
-                <td></td>
+                <td style="border:1px solid black;">Thursday</td>
+                <td style="border:1px solid black;"></td>
             </tr>
             <tr>
-                <td>Friday</td>
-                <td></td>
+                <td style="border:1px solid black;">Friday</td>
+                <td style="border:1px solid black;"></td>
             </tr>
             <tr>
-                <td>Saturday</td>
-                <td></td>
+                <td style="border:1px solid black;">Saturday</td>
+                <td style="border:1px solid black;"></td>
             </tr>
             <tr>
-                <td>Sunday</td>
-                <td></td>
+                <td style="border:1px solid black;">Sunday</td>
+                <td style="border:1px solid black;"></td>
             </tr>
         </table>
 	</body>
