--- a/module02.html
+++ b/module02.html
@@ -9,7 +9,7 @@
 	<body>
         <table style="border:1px solid black;border-collapse:collapse;">
             <tr>
-                <td style="text-align:center" style="border:1px solid black;" colspan="3"><h1>HTML Table Example</h1> </td>
+                <td style="text-align:center;border:1px solid black;" colspan="3"><h1>HTML Table Example</h1> </td>
             </tr>
             <tr>
                 <td style="border:1px solid black;"><img alt="kitchen clipart" src="images/KitchenClipArt.JPG"></td>
