--- a/chess/chessboard.html
+++ b/chess/chessboard.html
@@ -1,95 +1,97 @@
+<!DOCTYPE html>
+
 <html>
+    <head>
+        <meta charset="utf-8" />
+        <meta lang="en" />
+        
+        <title>Artifact-03</title>
+        <link rel="stylesheet" media="screen" href="http://openfontlibrary.org/face/just-letters" type="text/css"/>
+        <link rel="stylesheet" media="screen" href="style.css" type="text/css"/>
+    </head>
 
+    <body>
+        <h1 id="title">Chessboard</h1>
 
-<head>
-    <meta name="description" content="PROG 109 - Chessboard" />
-    <meta charset="utf-8" />
-    <title>Artifact-03</title>
-    <link rel="stylesheet" media="screen" href="http://openfontlibrary.org/face/just-letters" type="text/css"/>
-    <link rel="stylesheet" media="screen" href="style.css" type="text/css"/>
-</head>
+        <div class="chessboard">
+        <!-- 1 -->
+        <div class="white"><img class="piece" src="images/black-castle.png" alt="chess figure - black castle"></div>
+        <div class="black"><img class="piece" src="images/black-knight.png" alt="chess figure - black knight"></div>
+        <div class="white"><img class="piece" src="images/black-bishop.png" alt="chess figure - black bishop"></div>
+        <div class="black"><img class="piece" src="images/black-queen.png" alt="chess figure - black queen"></div>
+        <div class="white"><img class="piece" src="images/black-king.png" alt="chess figure - black king"></div>
+        <div class="black"><img class="piece" src="images/black-bishop.png" alt="chess figure - black bishop"></div>
+        <div class="white"><img class="piece" src="images/black-knight.png" alt="chess figure - black knight"></div>
+        <div class="black"><img class="piece" src="images/black-castle.png" alt="chess figure - black castle"></div>
+        <!-- 2 -->
+        <div class="black"><img class="piece" src="images/black-pawn.png" alt="chess figure - black pawn"></div>
+        <div class="white"><img class="piece" src="images/black-pawn.png" alt="chess figure - black pawn"></div>
+        <div class="black"><img class="piece" src="images/black-pawn.png" alt="chess figure - black pawn"></div>
+        <div class="white"><img class="piece" src="images/black-pawn.png" alt="chess figure - black pawn"></div>
+        <div class="black"><img class="piece" src="images/black-pawn.png" alt="chess figure - black pawn"></div>
+        <div class="white"><img class="piece" src="images/black-pawn.png" alt="chess figure - black pawn"></div>
+        <div class="black"><img class="piece" src="images/black-pawn.png" alt="chess figure - black pawn"></div>
+        <div class="white"><img class="piece" src="images/black-pawn.png" alt="chess figure - black pawn"></div>
+        <!-- 3 -->
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <!-- 4 -->
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <!-- 5 -->
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <!-- 6 -->
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <!-- 7 -->
+        <div class="white"><img class="piece" src="images/gold-pawn.png" alt="chess figure - white pawn"></div>
+        <div class="black"><img class="piece" src="images/gold-pawn.png" alt="chess figure - white pawn"></div>
+        <div class="white"><img class="piece" src="images/gold-pawn.png" alt="chess figure - white pawn"></div>
+        <div class="black"><img class="piece" src="images/gold-pawn.png" alt="chess figure - white pawn"></div>
+        <div class="white"><img class="piece" src="images/gold-pawn.png" alt="chess figure - white pawn"></div>
+        <div class="black"><img class="piece" src="images/gold-pawn.png" alt="chess figure - white pawn"></div>
+        <div class="white"><img class="piece" src="images/gold-pawn.png" alt="chess figure - white pawn"></div>
+        <div class="black"><img class="piece" src="images/gold-pawn.png" alt="chess figure - white pawn"></div>
+        <!-- 8 -->
+        <div class="black"><img class="piece" src="images/gold-castle.png" alt="chess figure - white castle"></div>
+        <div class="white"><img class="piece" src="images/gold-knight.png" alt="chess figure - white knight"></div>
+        <div class="black"><img class="piece" src="images/gold-bishop.png" alt="chess figure - white bishop"></div>
+        <div class="white"><img class="piece" src="images/gold-queen.png" alt="chess figure - white queen"></div>
+        <div class="black"><img class="piece" src="images/gold-king.png" alt="chess figure - white king"></div>
+        <div class="white"><img class="piece" src="images/gold-bishop.png" alt="chess figure - white bishop"></div>
+        <div class="black"><img class="piece" src="images/gold-knight.png" alt="chess figure - white knight"></div>
+        <div class="white"><img class="piece" src="images/gold-castle.png" alt="chess figure - white castle"></div>
+        </div>
 
+        <div id="footer">
+            <p><a href="http://validator.w3.org/check?uri=referer" referrerpolicy="origin" target="_blank"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0" height="31" width="88" /></a></p>
+            <p><a href="http://jigsaw.w3.org/css-validator/check/referer" referrerpolicy="origin" target="_blank"><img src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!"/></a></p>
+        </div>
 
-<body>
-<h1 id="title">Chessboard</h1>
-
-<div class="chessboard">
-<!-- 1 -->
-<div class="white"><img class="piece" src="images/black-castle.png" alt="chess figure - black castle"></div>
-<div class="black"><img class="piece" src="images/black-knight.png" alt="chess figure - black knight"></div>
-<div class="white"><img class="piece" src="images/black-bishop.png" alt="chess figure - black bishop"></div>
-<div class="black"><img class="piece" src="images/black-queen.png" alt="chess figure - black queen"></div>
-<div class="white"><img class="piece" src="images/black-king.png" alt="chess figure - black king"></div>
-<div class="black"><img class="piece" src="images/black-bishop.png" alt="chess figure - black bishop"></div>
-<div class="white"><img class="piece" src="images/black-knight.png" alt="chess figure - black knight"></div>
-<div class="black"><img class="piece" src="images/black-castle.png" alt="chess figure - black castle"></div>
-<!-- 2 -->
-<div class="black"><img class="piece" src="images/black-pawn.png" alt="chess figure - black pawn"></div>
-<div class="white"><img class="piece" src="images/black-pawn.png" alt="chess figure - black pawn"></div>
-<div class="black"><img class="piece" src="images/black-pawn.png" alt="chess figure - black pawn"></div>
-<div class="white"><img class="piece" src="images/black-pawn.png" alt="chess figure - black pawn"></div>
-<div class="black"><img class="piece" src="images/black-pawn.png" alt="chess figure - black pawn"></div>
-<div class="white"><img class="piece" src="images/black-pawn.png" alt="chess figure - black pawn"></div>
-<div class="black"><img class="piece" src="images/black-pawn.png" alt="chess figure - black pawn"></div>
-<div class="white"><img class="piece" src="images/black-pawn.png" alt="chess figure - black pawn"></div>
-<!-- 3 -->
-<div class="white"></div>
-<div class="black"></div>
-<div class="white"></div>
-<div class="black"></div>
-<div class="white"></div>
-<div class="black"></div>
-<div class="white"></div>
-<div class="black"></div>
-<!-- 4 -->
-<div class="black"></div>
-<div class="white"></div>
-<div class="black"></div>
-<div class="white"></div>
-<div class="black"></div>
-<div class="white"></div>
-<div class="black"></div>
-<div class="white"></div>
-<!-- 5 -->
-<div class="white"></div>
-<div class="black"></div>
-<div class="white"></div>
-<div class="black"></div>
-<div class="white"></div>
-<div class="black"></div>
-<div class="white"></div>
-<div class="black"></div>
-<!-- 6 -->
-<div class="black"></div>
-<div class="white"></div>
-<div class="black"></div>
-<div class="white"></div>
-<div class="black"></div>
-<div class="white"></div>
-<div class="black"></div>
-<div class="white"></div>
-<!-- 7 -->
-<div class="white"><img class="piece" src="images/gold-pawn.png" alt="chess figure - white pawn"></div>
-<div class="black"><img class="piece" src="images/gold-pawn.png" alt="chess figure - white pawn"></div>
-<div class="white"><img class="piece" src="images/gold-pawn.png" alt="chess figure - white pawn"></div>
-<div class="black"><img class="piece" src="images/gold-pawn.png" alt="chess figure - white pawn"></div>
-<div class="white"><img class="piece" src="images/gold-pawn.png" alt="chess figure - white pawn"></div>
-<div class="black"><img class="piece" src="images/gold-pawn.png" alt="chess figure - white pawn"></div>
-<div class="white"><img class="piece" src="images/gold-pawn.png" alt="chess figure - white pawn"></div>
-<div class="black"><img class="piece" src="images/gold-pawn.png" alt="chess figure - white pawn"></div>
-<!-- 8 -->
-<div class="black"><img class="piece" src="images/gold-castle.png" alt="chess figure - white castle"></div>
-<div class="white"><img class="piece" src="images/gold-knight.png" alt="chess figure - white knight"></div>
-<div class="black"><img class="piece" src="images/gold-bishop.png" alt="chess figure - white bishop"></div>
-<div class="white"><img class="piece" src="images/gold-queen.png" alt="chess figure - white queen"></div>
-<div class="black"><img class="piece" src="images/gold-king.png" alt="chess figure - white king"></div>
-<div class="white"><img class="piece" src="images/gold-bishop.png" alt="chess figure - white bishop"></div>
-<div class="black"><img class="piece" src="images/gold-knight.png" alt="chess figure - white knight"></div>
-<div class="white"><img class="piece" src="images/gold-castle.png" alt="chess figure - white castle"></div>
-</div>
-
-<div id="footer"><p><a href="http://validator.w3.org/check?uri=referer" target="_blank"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0" height="31" width="88" /></a></p>
-    <p><a href="http://jigsaw.w3.org/css-validator/check/referer" target="_blank"><img src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!"/></a></p></div>
-
-</body>
+    </body>
 </html>
