--- a/chess/chessboard.html
+++ b/chess/chessboard.html
@@ -1,10 +1,8 @@
-<!DOCTYPE css>
+<!DOCTYPE HTML>
 
-<html>
+<html lang="EN">
     <head>
         <meta charset="utf-8" />
-        <meta lang="en" />
-        
         <title>Artifact-03</title>
         <link rel="stylesheet" media="screen" href="http://openfontlibrary.org/face/just-letters" type="text/css"/>
         <link rel="stylesheet" media="screen" href="style.css" type="text/css"/>
