--- a/chess/chessboard.html
+++ b/chess/chessboard.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Artifact-03</title>
-        <link rel="stylesheet" media="screen" href="http://openfontlibrary.org/face/just-letters" type="text/css"/>
+        <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/handelgothictl-regular" type="text/css"/>
         <link rel="stylesheet" media="screen" href="style.css" type="text/css"/>
     </head>
 
