--- a/chess/chessboard.html
+++ b/chess/chessboard.html
@@ -5,9 +5,8 @@
         <meta charset="utf-8" />
         <title>Artifact-03</title>
         <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/handelgothictl-regular" type="text/css"/>
-        <link rel="stylesheet" media="text/css" href="style.css" type="text/css"/>
+        <link rel="stylesheet" media="screen" href="style.css" type="text/css"/>
     </head>
-
     <body>
         <h1 id="title">Chessboard</h1>
 
