--- a/module02.html
+++ b/module02.html
@@ -12,7 +12,7 @@
                 <td style="text-align:center;border:1px solid black;" colspan="3"><h1>HTML Table Example</h1> </td>
             </tr>
             <tr>
-                <td style="border:1px solid black;"><img alt="kitchen clipart" src="images/KitchenClipArt.JPG"></td>
+                <td style="border:1px solid black;"><img alt="kitchen clipart" src="data/images/KitchenClipArt.JPG"></td>
                 <td style="border:1px solid black;"><h2>Meal Planner</h2></td>
                 <td style="border:1px solid black;"><h2>Recipie Index #:</h2></td>
             </tr>
