--- a/module03.html
+++ b/module03.html
@@ -3,6 +3,7 @@
 <html lang="en">
 	<head>
         <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width">
 		<title>Module 03</title>
         <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/dancing" type="text/css"/>
         <link rel="stylesheet" type="text/css" href="css/module03.css" />
