--- a/module05.html
+++ b/module05.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" type="text/css" href="css/module05.css" />
+        <link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Wellfleet" type="text/css"/>
 	</head>
     <body>
         <section id="page2">
