add about page and fix footer

--- a/templatemo_506_tinker/about.html
+++ b/templatemo_506_tinker/about.html
@@ -36,7 +36,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a href="#" class="navbar-brand scroll-top">Portfolio Project</a>
+                        <a href="templatemo_506_tinker/index.html" class="navbar-brand scroll-top">Portfolio Project</a>
                     </div>
                     <!--/.navbar-header-->
                     <div id="main-nav" class="collapse navbar-collapse">
@@ -65,48 +65,46 @@
                             <img src="img/IMG_1028.jpg" height="350" alt="Portrait of Seamus Allen">
                         </div>
                         <div class="col-md-8">
-                            <p style="color:#fff;">Hey all! My name is Seamus Allen, and I’m an avid lover of all things roleplaying games, a card-carrying nerd, and the Editor in Chief of Bellevue College’s The Watchdog. I love backpacking, long conversations with friends, and making a spectacular mess in the kitchen.</p>
+                            <p>Hey all! My name is Seamus Allen, and I’m an avid lover of all things roleplaying games, a card-carrying nerd, 
+                                and the Editor in Chief of Bellevue College’s The Watchdog. I love backpacking, long conversations with friends, and making a 
+                                spectacular mess in the kitchen.</p>
+                            <p>I'm currently a student at Bellevue College, where I'm taking Introduction to Web Development (the class this site is for) and 
+                                Environmental Politics. This is my last quarter here though, and I'll be joining the Stanford Class of 2025 this fall.</p>
+                            <p>You can follow me on social media at the links below:</p>
+                            <div class="connect-us">
+                                <ul>
+                                    <li><a href="https://twitter.com/Seamus_J_Allen"><i class="fa fa-twitter"></i></a></li>
+                                    <li><a href="https://www.instagram.com/amaroq2002/"><i class="fa fa-instagram"></i></a></li>
+                                </ul>
+                            </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
         </section>
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4 col-sm-12">
-                    <div class="contact-info">
-                        <h4>Copyright</h4>
-                        <ul>
-                            <li>Copyright &copy; 2020 Seamus Allen</li>
-                            <li>Template Credit: TemplateMo</li>
-                        </ul>
-                    </div> 
-                </div>
-                <div class="col-md-4 col-sm-12">
-                    <div class="connect-us">
-                        <h4>Social Media</h4>
-                        <ul>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-
-                        </ul>
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 col-sm-12">
+                        <div class="contact-info">
+                            <h4>Copyright</h4>
+                            <div class="line-dec"></div>
+                            <p>Copyright &copy; 2020 Seamus Allen</p>
+                            <p>Template Credit: TemplateMo</p>
+                        </div> 
+                    </div>
+                    <div class="col-md-4 col-sm-12"></div>
+                    <div class="col-md-6 col-sm-12">
+                        <div class="contact-info">
+                            <h4>More Info</h4>
+                            <div class="line-dec"></div>
+                            <p><strong>Ashen Lands</strong>: ashenlands.seamusallen.com</p>
+                            <p><strong>Disillusioned Citizen</strong>: disillusionedcitizen.org</p>
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-12">
-                    <div class="contact-info">
-                        <h4>More Info</h4>
-                        <ul>
-                            <li><em>Ashen Lands</em>: ashenlands.seamusallen.com</li>
-                            <li><em>Disillusioned Citizen</em>: disillusionedcitizen.org</li>
-                        </ul>
-                    </div>
-                </div>
-                
             </div>
-        </div>
-    </footer>
+        </footer>
     </body>
 
     
