--- a/templatemo_506_tinker/index.html
+++ b/templatemo_506_tinker/index.html
@@ -240,35 +240,22 @@ https://templatemo.com/tm-506-tinker
             </div>
         </div>
     </div>
-    <footer>
+<footer>
         <div class="container">
             <div class="row">
-                <div class="col-md-4 col-sm-12">
+                <div class="col-md-6 col-sm-12">
                     <div class="contact-info">
                         <h4>Copyright</h4>
-                        <ul>
-                            <li>Copyright &copy; 2020 Seamus Allen</li>
-                            <li>Template Credit: TemplateMo</li>
-                        </ul>
+                        <p>Copyright &copy; 2020 Seamus Allen</p>
+                        <p>Template Credit: TemplateMo</p>
                     </div> 
                 </div>
-                <div class="col-md-4 col-sm-12">
-                    <div class="connect-us">
-                        <h4>Social Media</h4>
-                        <ul>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-12">
+                <div class="col-md-4 col-sm-12"></div>
+                <div class="col-md-6 col-sm-12">
                     <div class="contact-info">
                         <h4>More Info</h4>
-                        <ul>
-                            <li><em>Ashen Lands</em>: ashenlands.seamusallen.com</li>
-                            <li><em>Disillusioned Citizen</em>: disillusionedcitizen.org</li>
-                        </ul>
+                        <p><strong>Ashen Lands</strong>: ashenlands.seamusallen.com</p>
+                        <p><strong>Disillusioned Citizen</strong>: disillusionedcitizen.org</p>
                     </div>
                 </div>
                 
