More midterm commits

--- a/midterm/formsubmitted.html
+++ b/midterm/formsubmitted.html
@@ -36,16 +36,17 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a href="templatemo_506_tinker/index.html" class="navbar-brand scroll-top">Portfolio Project</a>
+                        <a href="#" class="navbar-brand scroll-top">Portfolio Project</a>
                     </div>
                     <!--/.navbar-header-->
                     <div id="main-nav" class="collapse navbar-collapse">
                         <ul class="nav navbar-nav">
-                            <li><a href="#" class="scroll-top">Home</a></li>
-                            <li><a href="#" class="scroll-link" data-id="about">About Us</a></li>
-                            <li><a href="#" class="scroll-link" data-id="portfolio">Portfolio</a></li>
-                            <li><a href="#" class="scroll-link" data-id="blog">Blog</a></li>
-                            <li><a href="#" class="scroll-link" data-id="contact-us">Contact Us</a></li>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="about.html">About</a></li>
+                            <li><a href="artifacts.html">Artifacts</a></li>
+                            <li><a href="moduleassignments.html">Module Assignments</a></li>
+                            <li><a href="contactme.html">Contact Me</a></li>
+                            <li><a href="ashenlands.html">Ashen Lands</a></li>
                         </ul>
                     </div>
                     <!--/.navbar-collapse-->
@@ -55,33 +56,59 @@
             <!--/.container-->
         </div>
         <!--/.header-->
-
         <section id="about" class="page-section">
             <div class="container">
                 <div class="section-heading">
-                    <h1>About Me</h1>
-                    <div class="row">
-                        <div class="col-md-4 col-sm-12">
-                            <img src="img/IMG_1028.jpg" height="350" alt="Portrait of Seamus Allen">
-                        </div>
-                        <div class="col-md-8">
-                            <p>Hey all! My name is Seamus Allen, and I’m an avid lover of all things roleplaying games, a card-carrying nerd, 
-                                and the Editor in Chief of Bellevue College’s The Watchdog. I love backpacking, long conversations with friends, and making a 
-                                spectacular mess in the kitchen.</p>
-                            <p>I'm currently a student at Bellevue College, where I'm taking Introduction to Web Development (the class this site is for) and 
-                                Environmental Politics. This is my last quarter here though, and I'll be joining the Stanford Class of 2025 this fall.</p>
-                            <p>You can follow me on social media at the links below:</p>
-                            <div class="connect-us">
-                                <ul>
-                                    <li><a href="https://twitter.com/Seamus_J_Allen"><i class="fa fa-twitter"></i></a></li>
-                                    <li><a href="https://www.instagram.com/amaroq2002/"><i class="fa fa-instagram"></i></a></li>
-                                </ul>
-                            </div>
-                            </div>
-                        </div>
-                    </div>
+                    <h1>Submission Recieved! Thank you!</h1>
+                    <p>*submission not actually recieved. This was all a clever ruse! You have been tricked, backstabbed, and quite possibly, bamboozeled! I leave you with this song!</p>
+                    <iframe width="450" height="315" src="https://www.youtube.com/watch?v=qMMnt0XR_as"></iframe>
+                    <!-- <p><em>
+                        People bug me when they interrupt me with calls <br>
+                        And unannounced visits<br>
+                        And on top of that when they chat about nothing at all<br>
+                        And I ask 'what is it?'<br>
+                        I do have a lot to do<br>
+                        Can you return at two?<br>
+                        I will not be here by then<br>
+                        Just leave what you need me for<br>
+                        On a note on my door<br>
+                        So I can ignore it my friend<br>
+                        <br>
+                        You may think it maddening when you ring my answering machine<br>
+                        And I"m right there listening<br>
+                        But I"d like to hire my own secretary who's mean<br>
+                        Someone who says things like<br>
+                        <br>
+                        'Mr. Mayer can"t be reached<br>
+                        He is not in, you see<br>
+                        He"s in a meeting till ten<br>
+                        I suppose I could take your name<br>
+                        Who are you anyway?<br>
+                        Please never call here again<br>
+                        If I see you before you see me in the hall<br>
+                        Then while you"re not looking<br>
+                        I"ll find the nearest bathroom and hide in the stall<br>
+                        Till I think the coast is clear<br>
+                        Then I will take a peak<br>
+                        And, if you"re gone, I"ll sneak<br>
+                        Back to my private abode<br>
+                        There in my world of one<br>
+                        I have a lot more fun<br>
+                        Because people bug me you know<br>
+                        <br>
+                        I do have a lot to do<br>
+                        Can you return at two?<br>
+                        I will not be here by then<br>
+                        Just leave what you need me for<br>
+                        On a note on my door<br>
+                        So I can ignore it my friend (repeat first verse)<br>
+                    </em>
+                    </p> !-->
+
                 </div>
+            </div>
         </section>
+
         <footer>
             <div class="container">
                 <div class="row">
@@ -106,5 +133,3 @@
             </div>
         </footer>
     </body>
-
-    
