--- a/midterm/index.html
+++ b/midterm/index.html
@@ -42,11 +42,12 @@ https://templatemo.com/tm-506-tinker
                 <!--/.navbar-header-->
                 <div id="main-nav" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li><a href="#" class="scroll-top">Home</a></li>
-                        <li><a href="#" class="scroll-link" data-id="about">About Us</a></li>
-                        <li><a href="#" class="scroll-link" data-id="portfolio">Portfolio</a></li>
-                        <li><a href="#" class="scroll-link" data-id="blog">Blog</a></li>
-                        <li><a href="#" class="scroll-link" data-id="contact-us">Contact Us</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="artifacts.html">Artifacts</a></li>
+                        <li><a href="moduleassignments.html">Module Assignments</a></li>
+                        <li><a href="contactme.html">Contact Me</a></li>
+                        <li><a href="ashenlands.html">Ashen Lands</a></li>
                     </ul>
                 </div>
                 <!--/.navbar-collapse-->
@@ -82,7 +83,7 @@ https://templatemo.com/tm-506-tinker
                     <div class="col-md-8">
                         <p style="color:#fff;">Hey all! My name is Seamus Allen, and I’m an avid lover of all things roleplaying games, a card-carrying nerd, and the Editor in Chief of Bellevue College’s The Watchdog. I love backpacking, long conversations with friends, and making a spectacular mess in the kitchen.</p>
                         <div class="primary-white-button">
-                            <a href="#" class="scroll-link" data-id="about">Continue Reading &raquo;</a>
+                            <a href="about.html">Continue Reading &raquo;</a>
                         </div>
                     </div>
                 </div>
@@ -101,7 +102,7 @@ https://templatemo.com/tm-506-tinker
                         <div class="line-dec"></div>
                         <p>5 larger projects completed throughout the quarter.</p> 
                         <div class="primary-white-button">
-                            <a href="#" class="scroll-link" data-id="about">See All &raquo;</a>
+                            <a href="artifacts.html">See All &raquo;</a>
                         </div>
                     </div>
                     <div class="col-md-6">
@@ -109,7 +110,7 @@ https://templatemo.com/tm-506-tinker
                         <div class="line-dec"></div>
                         <p>Smaller development assignments completed with each new concept</p>
                         <div class="primary-white-button">
-                            <a href="#" class="scroll-link" data-id="about">See All &raquo;</a>
+                            <a href="moduleassignments.html">See All &raquo;</a>
                         </div>
                     </div>
                     </div>
@@ -178,7 +179,7 @@ https://templatemo.com/tm-506-tinker
                         <div class="line-dec"></div>
                         <p>A new tableop roleplaying game set in the aftermath of a supernatural apocalypse. Currently in playtesting.</p> 
                         <div class="primary-white-button">
-                            <a href="#" class="scroll-link" data-id="about">About &raquo;</a>
+                            <a href="ashenlands.html">About &raquo;</a>
                         </div>
                     </div>
                     <div class="col-md-6">
@@ -186,7 +187,7 @@ https://templatemo.com/tm-506-tinker
                         <div class="line-dec"></div>
                         <p>My personal blog about political issues, especially voting rights and the environment. Posts are on a rigorous schedule of "when I feel like it."</p>
                         <div class="primary-white-button">
-                            <a href="#" class="scroll-link" data-id="about">About &raquo;</a>
+                            <a href="http://ashenlands.seamusallen.com">About &raquo;</a>
                         </div>
                     </div>
                     </div>
@@ -201,40 +202,9 @@ https://templatemo.com/tm-506-tinker
                     <div class="section-heading">
                         <h4>Contact Me</h4>
                         <div class="line-dec"></div>
-                        <div class="pop-button">
-                            <h4>Send a message</h4>
+                        <div class="primary-white-button">
+                            <a href="contactme.html">Send a message &raquo;</a>
                         </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6 col-md-offset-3">
-                    <div class="pop">
-                        <span>✖</span>
-                        <form id="contact" action="#" method="post">
-                            <div class="row">
-                                <div class="col-md-12">
-                                  <fieldset>
-                                    <input name="name" type="text" class="form-control" id="name" placeholder="Your name..." required="">
-                                  </fieldset>
-                                </div>
-                                <div class="col-md-12">
-                                  <fieldset>
-                                    <input name="email" type="email" class="form-control" id="email" placeholder="Your email..." required="">
-                                  </fieldset>
-                                </div>
-                                <div class="col-md-12">
-                                  <fieldset>
-                                    <textarea name="message" rows="6" class="form-control" id="message" placeholder="Your message..." required=""></textarea>
-                                  </fieldset>
-                                </div>
-                                <div class="col-md-12">
-                                  <fieldset>
-                                    <button type="submit" id="form-submit" class="btn">Send Message</button>
-                                  </fieldset>
-                                </div>
-                            </div>
-                        </form>
                     </div>
                 </div>
             </div>
