--- a/midterm/coursework.html
+++ b/midterm/coursework.html
@@ -36,7 +36,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a href="#" class="navbar-brand scroll-top">Portfolio Project</a>
+                        <a href="index.html" class="navbar-brand scroll-top">Portfolio Project</a>
                     </div>
                     <!--/.navbar-header-->
                     <div id="main-nav" class="collapse navbar-collapse">
@@ -91,11 +91,57 @@
                         <div class="contact-info">
                             <h4>More Info</h4>
                             <div class="line-dec"></div>
-                            <p><strong>Ashen Lands</strong>: ashenlands.seamusallen.com</p>
-                            <p><strong>Disillusioned Citizen</strong>: disillusionedcitizen.org</p>
+                            <p><strong>Ashen Lands</strong>: <a href="http://ashenlands.seamusallen.com" target="_blank">ashenlands.seamusallen.com</a></p>
+                            <p><strong>Disillusioned Citizen</strong>: <a href="http://disillusionedcitizen.org" target="_blank">disillusionedcitizen.org</a></p>
                         </div>
                     </div>
                 </div>
             </div>
         </footer>
+        
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+
+    <script src="js/vendor/bootstrap.min.js"></script>
+
+    <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>
+
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script>
+    $(document).ready(function() {
+        // navigation click actions 
+        $('.scroll-link').on('click', function(event){
+            event.preventDefault();
+            var sectionID = $(this).attr("data-id");
+            scrollToID('#' + sectionID, 750);
+        });
+        // scroll to top action
+        $('.scroll-top').on('click', function(event) {
+            event.preventDefault();
+            $('html, body').animate({scrollTop:0}, 'slow');         
+        });
+        // mobile nav toggle
+        $('#nav-toggle').on('click', function (event) {
+            event.preventDefault();
+            $('#main-nav').toggleClass("open");
+        });
+    });
+    // scroll function
+    function scrollToID(id, speed){
+        var offSet = 50;
+        var targetOffset = $(id).offset().top - offSet;
+        var mainNav = $('#main-nav');
+        $('html,body').animate({scrollTop:targetOffset}, speed);
+        if (mainNav.hasClass("open")) {
+            mainNav.css("height", "1px").removeClass("in").addClass("collapse");
+            mainNav.removeClass("open");
+        }
+    }
+    if (typeof console === "undefined") {
+        console = {
+            log: function() { }
+        };
+    }
+    </script>
     </body>
