--- a/midterm/ashenlands.html
+++ b/midterm/ashenlands.html
@@ -36,7 +36,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a href="#" class="navbar-brand scroll-top">Portfolio Project</a>
+                        <a href="index.html" class="navbar-brand scroll-top">Portfolio Project</a>
                     </div>
                     <!--/.navbar-header-->
                     <div id="main-nav" class="collapse navbar-collapse">
@@ -56,14 +56,14 @@
             <!--/.container-->
         </div>
         <!--/.header-->
-        <section id="about" class="page-section" style="padding-bottom: 30vh;">
+        <section id="about" class="page-section" style="padding-bottom: 30vh;background-image:url(img/wasteland-5894339_1920.jpg);background-color: black;">
             <div class="container">
                 <div class="section-heading">
                     <h1>Ashen Lands TTRPG</h1>
                         <p>My main passion project right now is Ashen Lans, a tabletop roleplaying game (like Dungeons and Dragons) I'm currently designing. </p>
-                        <p>You can chack out the project at <a href="http://ashenlands.seamusallen.com" target="_blank">ashenlands.seamusallen.com</a>, and follow for updates at <a href="https://twitter.com/AshenLandsRPG" target="_blank">twitter.com/AshenLandsRPG</a></p>
-                        <br>
-                        <p><strong>The game is set in the wake of a supernatural apocalypse, and this is it's premise:</strong></p>
+                        <p>You can chack out the project at <a href="http://ashenlands.seamusallen.com" target="_blank">ashenlands.seamusallen.com</a>, and follow for updates at <a href="https://twitter.com/AshenLandsRPG" target="_blank">twitter.com/AshenLandsRPG</a>.</p>
+                        <hr>
+                        <p><strong>The game is set in the wake of a supernatural apocalypse, and this is its premise:</strong></p>
 
                             <p><em>Perhaps you lived it yourself, or you are young enough to have only heard the tales of those who did: on that fateful day, three decades ago, some ill magic slouched across the world, it’s disinterested malevolence seeping in from every shadowed corner and unwatched crevice. <br>
                                 <br>
@@ -77,8 +77,9 @@
                                 <br>
                                 Yet there is hope. There is always hope. A small band of heroes gather. Will you be a spark of light in the darkness, or yet another dream undone?<br>
                             </em></p>
-
-
+                            <hr>
+                            <p><strong>If you're interested in what it is like to play, here is an excerpt from our most recent session:</strong></p>
+                            <iframe src="img/Reforging_the_Elder_Blade.mp4" width="640" height="360"></iframe>
                     </div>
                 </div>
         </section>
@@ -98,11 +99,57 @@
                         <div class="contact-info">
                             <h4>More Info</h4>
                             <div class="line-dec"></div>
-                            <p><strong>Ashen Lands</strong>: ashenlands.seamusallen.com</p>
-                            <p><strong>Disillusioned Citizen</strong>: disillusionedcitizen.org</p>
+                            <p><strong>Ashen Lands</strong>: <a href="http://ashenlands.seamusallen.com" target="_blank">ashenlands.seamusallen.com</a></p>
+                            <p><strong>Disillusioned Citizen</strong>: <a href="http://disillusionedcitizen.org" target="_blank">disillusionedcitizen.org</a></p>
                         </div>
                     </div>
                 </div>
             </div>
         </footer>
+        
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+
+    <script src="js/vendor/bootstrap.min.js"></script>
+
+    <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>
+
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script>
+    $(document).ready(function() {
+        // navigation click actions 
+        $('.scroll-link').on('click', function(event){
+            event.preventDefault();
+            var sectionID = $(this).attr("data-id");
+            scrollToID('#' + sectionID, 750);
+        });
+        // scroll to top action
+        $('.scroll-top').on('click', function(event) {
+            event.preventDefault();
+            $('html, body').animate({scrollTop:0}, 'slow');         
+        });
+        // mobile nav toggle
+        $('#nav-toggle').on('click', function (event) {
+            event.preventDefault();
+            $('#main-nav').toggleClass("open");
+        });
+    });
+    // scroll function
+    function scrollToID(id, speed){
+        var offSet = 50;
+        var targetOffset = $(id).offset().top - offSet;
+        var mainNav = $('#main-nav');
+        $('html,body').animate({scrollTop:targetOffset}, speed);
+        if (mainNav.hasClass("open")) {
+            mainNav.css("height", "1px").removeClass("in").addClass("collapse");
+            mainNav.removeClass("open");
+        }
+    }
+    if (typeof console === "undefined") {
+        console = {
+            log: function() { }
+        };
+    }
+    </script>
     </body>
