--- a/midterm/index.html
+++ b/midterm/index.html
@@ -37,7 +37,7 @@ https://templatemo.com/tm-506-tinker
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="#" class="navbar-brand scroll-top">Portfolio Project</a>
+                    <a href="index.html" class="navbar-brand scroll-top">Portfolio Project</a>
                 </div>
                 <!--/.navbar-header-->
                 <div id="main-nav" class="collapse navbar-collapse">
@@ -187,7 +187,7 @@ https://templatemo.com/tm-506-tinker
                         <div class="line-dec"></div>
                         <p>My personal blog about political issues, especially voting rights and the environment. Posts are on a rigorous schedule of "when I feel like it."</p>
                         <div class="primary-white-button">
-                            <a href="http://ashenlands.seamusallen.com">About &raquo;</a>
+                            <a href="http://disillusionedcitizen.org">Visit Site &raquo;</a>
                         </div>
                     </div>
                     </div>
@@ -210,12 +210,13 @@ https://templatemo.com/tm-506-tinker
             </div>
         </div>
     </div>
-<footer>
+    <footer>
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-sm-12">
                     <div class="contact-info">
                         <h4>Copyright</h4>
+                        <div class="line-dec"></div>
                         <p>Copyright &copy; 2020 Seamus Allen</p>
                         <p>Template Credit: TemplateMo</p>
                     </div> 
@@ -224,11 +225,11 @@ https://templatemo.com/tm-506-tinker
                 <div class="col-md-6 col-sm-12">
                     <div class="contact-info">
                         <h4>More Info</h4>
-                        <p><strong>Ashen Lands</strong>: ashenlands.seamusallen.com</p>
-                        <p><strong>Disillusioned Citizen</strong>: disillusionedcitizen.org</p>
+                        <div class="line-dec"></div>
+                        <p><strong>Ashen Lands</strong>: <a href="http://ashenlands.seamusallen.com" target="_blank">ashenlands.seamusallen.com</a></p>
+                        <p><strong>Disillusioned Citizen</strong>: <a href="http://disillusionedcitizen.org" target="_blank">disillusionedcitizen.org</a></p>
                     </div>
                 </div>
-                
             </div>
         </div>
     </footer>
