--- a/midterm/moduleassignments.html
+++ b/midterm/moduleassignments.html
@@ -10,8 +10,8 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
+        <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/pathway-extreme" type="text/css"/>
         
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
@@ -26,36 +26,37 @@
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
     <body>
-        <div class="header">
-            <div class="container">
-                <nav class="navbar navbar-inverse">
-                    <div class="navbar-header">
-                        <button type="button" id="nav-toggle" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <a href="index.html" class="navbar-brand scroll-top">Portfolio Project</a>
-                    </div>
-                    <!--/.navbar-header-->
-                    <div id="main-nav" class="collapse navbar-collapse">
-                        <ul class="nav navbar-nav">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="about.html">About</a></li>
-                            <li><a href="artifacts.html">Artifacts</a></li>
-                            <li><a href="moduleassignments.html">Module Assignments</a></li>
-                            <li><a href="contactme.html">Contact Me</a></li>
-                            <li><a href="ashenlands.html">Ashen Lands</a></li>
-                        </ul>
-                    </div>
-                    <!--/.navbar-collapse-->
-                </nav>
-                <!--/.navbar-->
+            <div class="header">
+                <div class="container">
+                    <nav class="navbar navbar-inverse">
+                        <div class="navbar-header">
+                            <button type="button" id="nav-toggle" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav">
+                                <span class="sr-only">Toggle navigation</span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                            <a href="index.html" class="navbar-brand scroll-top">Portfolio Project</a>
+                        </div>
+                        <!--/.navbar-header-->
+                        <div id="main-nav" class="collapse navbar-collapse">
+                            <ul class="nav navbar-nav">
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="about.html">About</a></li>
+                                <li><a href="coursework.html">Coursework</a></li>
+                                <li><a href="artifacts.html">Artifacts</a></li>
+                                <li><a href="moduleassignments.html">Module Assignments</a></li>
+                                <li><a href="contactme.html">Contact Me</a></li>
+                                <li><a href="ashenlands.html">Ashen Lands</a></li>
+                            </ul>
+                        </div>
+                        <!--/.navbar-collapse-->
+                    </nav>
+                    <!--/.navbar-->
+                </div>
+                <!--/.container-->
             </div>
-            <!--/.container-->
-        </div>
-        <!--/.header-->
+            <!--/.header-->
 
         <section id="about" class="page-section" style="padding-bottom: 40vh;">
             <div class="container">
