--- a/midterm/formsubmitted.html
+++ b/midterm/formsubmitted.html
@@ -10,8 +10,8 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
+        <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/pathway-extreme" type="text/css"/>
         
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
@@ -43,6 +43,7 @@
                         <ul class="nav navbar-nav">
                             <li><a href="index.html">Home</a></li>
                             <li><a href="about.html">About</a></li>
+                            <li><a href="coursework.html">Coursework</a></li>
                             <li><a href="artifacts.html">Artifacts</a></li>
                             <li><a href="moduleassignments.html">Module Assignments</a></li>
                             <li><a href="contactme.html">Contact Me</a></li>
