--- a/midterm/index.html
+++ b/midterm/index.html
@@ -10,8 +10,8 @@ https://templatemo.com/tm-506-tinker
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
+        <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/pathway-extreme" type="text/css"/>
         
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
@@ -44,6 +44,7 @@ https://templatemo.com/tm-506-tinker
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About</a></li>
+                        <li><a href="coursework.html">Coursework</a></li>
                         <li><a href="artifacts.html">Artifacts</a></li>
                         <li><a href="moduleassignments.html">Module Assignments</a></li>
                         <li><a href="contactme.html">Contact Me</a></li>
@@ -101,6 +102,7 @@ https://templatemo.com/tm-506-tinker
                         <h3>Artifacts</h3>
                         <div class="line-dec"></div>
                         <p>5 larger projects completed throughout the quarter.</p> 
+                        <br>
                         <div class="primary-white-button">
                             <a href="artifacts.html">See All &raquo;</a>
                         </div>
@@ -109,6 +111,7 @@ https://templatemo.com/tm-506-tinker
                         <h3>Module Assignments</h3>
                         <div class="line-dec"></div>
                         <p>Smaller development assignments completed with each new concept</p>
+                        <br>
                         <div class="primary-white-button">
                             <a href="moduleassignments.html">See All &raquo;</a>
                         </div>
@@ -136,7 +139,7 @@ https://templatemo.com/tm-506-tinker
                             </div>
                             <div class="line-dec"></div>
                             <div class="primary-white-button">
-                                <a href="#" class="scroll-link" data-id="about">View Full Coursework &raquo;</a>
+                                <a href="coursework.html">View Full Coursework &raquo;</a>
                             </div>
                         </div>
                     </div>
@@ -177,7 +180,8 @@ https://templatemo.com/tm-506-tinker
                     <div class="col-md-6">
                         <h3>Ashen Lands TTRPG</h3>
                         <div class="line-dec"></div>
-                        <p>A new tableop roleplaying game set in the aftermath of a supernatural apocalypse. Currently in playtesting.</p> 
+                        <p>A new tableop roleplaying game set in the aftermath of a supernatural apocalypse. Currently in playtesting.</p>
+                        <br>
                         <div class="primary-white-button">
                             <a href="ashenlands.html">About &raquo;</a>
                         </div>
@@ -186,6 +190,7 @@ https://templatemo.com/tm-506-tinker
                         <h3>Disillusioned Citizen</h3>
                         <div class="line-dec"></div>
                         <p>My personal blog about political issues, especially voting rights and the environment. Posts are on a rigorous schedule of "when I feel like it."</p>
+                        <br>
                         <div class="primary-white-button">
                             <a href="http://disillusionedcitizen.org">Visit Site &raquo;</a>
                         </div>
