--- a/module08.html
+++ b/module08.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>JavaScript &amp; jQuery - Chapter 5: Document Object Model - Add Element</title>
+    <title>Module 08</title>
     <link rel="stylesheet" href="css/module08.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
@@ -14,8 +14,10 @@
           <li id="two" class="hot">pine nuts</li>
           <li id="three" class="hot">honey</li><li id="four">balsamic vinegar</li></ul>
       <input type="text" id="newitem"></input>
-      <button id=btnAddElement onclick="addItem();">Add new item</button>
+      <button id="btnAddElement" onclick="addItem();">Add new item</button>
+      <div id="warnspot"></div>
     </div>
+    
     <script src="js/module08.js"></script>
   </body>
 </html>
