Filling our more requirements

--- a/final/ashenlands.html
+++ b/final/ashenlands.html
@@ -61,7 +61,7 @@
             <div class="container">
                 <div class="section-heading">
                     <h1>Ashen Lands TTRPG</h1>
-                        <p>My main passion project right now is Ashen Lans, a tabletop roleplaying game (like Dungeons and Dragons) I'm currently designing. </p>
+                        <p>My main passion project right now is Ashen Lands, a tabletop roleplaying game (like Dungeons and Dragons) I'm currently designing. </p>
                         <p>You can check out the project at <a href="http://ashenlands.seamusallen.com" target="_blank">ashenlands.seamusallen.com</a>, and follow for updates at <a href="https://twitter.com/AshenLandsRPG" target="_blank">twitter.com/AshenLandsRPG</a>.</p>
                         <hr>
                         <p><strong>The game is set in the wake of a supernatural apocalypse, and this is its premise:</strong></p>
