--- a/final/formsubmitted.html
+++ b/final/formsubmitted.html
@@ -6,7 +6,7 @@
         Tinker CSS Template
         https://templatemo.com/tm-506-tinker
         -->
-        <title>Tinker CSS Template</title>
+        <title>Form Submitted</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
@@ -61,8 +61,9 @@
         <section id="about" class="page-section">
             <div class="container">
                 <div class="section-heading" style="height:70vh;">
-                    <h1>Submission Recieved! Thank you!</h1>
-                    <p>*submission not actually recieved. This was all a clever ruse! You have been tricked, backstabbed, and quite possibly, bamboozeled!</p>
+                    <iframe src="https://giphy.com/embed/i21tixUQEE7TEqwmYa" width="480" height="400" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/theoffice-nbc-the-office-tv-i21tixUQEE7TEqwmYa">via GIPHY</a></p>
+                    <h1>Submission received! Thank you!</h1>
+                    <p>*submission not actually received. This was all a clever ruse! You have been tricked, backstabbed, and quite possibly, bamboozled!</p>
                 </div>
             </div>
         </section>
