--- a/final/artifacts.html
+++ b/final/artifacts.html
@@ -134,7 +134,7 @@
                             </div>
                             <div class="col-md-6">
                                 <a href="../artifact06.html" target="_blank"><strong>Accessibility Guest Speaker</strong> | <em>Artifact 06</em></a> 
-                                <p>No code sumbitted — written refelction only.</p>
+                                <p>No code sunmitted — written refelction only.</p>
                                 </div>
                         </div>
                 </div>
