--- a/final/index.html
+++ b/final/index.html
@@ -180,7 +180,7 @@ https://templatemo.com/tm-506-tinker
                     <div class="col-md-6">
                         <h3>Ashen Lands TTRPG</h3>
                         <div class="line-dec"></div>
-                        <p>A new tableop roleplaying game set in the aftermath of a supernatural apocalypse. Currently in playtesting.</p>
+                        <p>A new tabletop roleplaying game set in the aftermath of a supernatural apocalypse. Currently in playtesting.</p>
                         <br>
                         <div class="primary-white-button">
                             <a href="ashenlands.html">About &raquo;</a>
@@ -224,6 +224,10 @@ https://templatemo.com/tm-506-tinker
                         <div class="line-dec"></div>
                         <p>Copyright &copy; 2020 Seamus Allen</p>
                         <p>Template Credit: TemplateMo</p>
+                        <p>Track: Driver — Broke in Summer [Audio Library Release] <br>
+                            Music provided by Audio Library Plus<br>
+                            Watch: <a href="youtu.be/Ud32AfKhtAY" target="_blank">youtu.be/Ud32AfKhtAY</a><br>
+                            Free Download / Stream: <a href="alplus.io/driver" target="_blank">alplus.io/driver</a></p>
                     </div> 
                 </div>
                 <div class="col-md-4 col-sm-12"></div>
@@ -233,6 +237,12 @@ https://templatemo.com/tm-506-tinker
                         <div class="line-dec"></div>
                         <p><strong>Ashen Lands</strong>: <a href="http://ashenlands.seamusallen.com" target="_blank">ashenlands.seamusallen.com</a></p>
                         <p><strong>Disillusioned Citizen</strong>: <a href="http://disillusionedcitizen.org" target="_blank">disillusionedcitizen.org</a></p>
+                        <br>
+                        <h4>Music — Broke in Summer by Driver</h4>
+                        <audio controls autoplay="true" loop="true" preload="auto" id="song">
+                            <source src="img/yt1s.com - Driver  Broke in Summer Audio Library Release  Free Copyrightsafe Music.mp3">
+                            Your browser does not support the audio tag.
+                        </audio>
                     </div>
                 </div>
             </div>
@@ -248,6 +258,11 @@ https://templatemo.com/tm-506-tinker
     <script src="js/main.js"></script>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+
+    <script>  
+        var music = document.getElementById("song");
+        music.volume = 0.2;
+    </script>
     <script>
     $(document).ready(function() {
         // navigation click actions 
